# Terminal-Hopper

./: CMakeLists.txt  README.md  main.cpp  raygui.h
Object/: CMakeLists.txt  Object.cpp  Object.hpp
Object/Objects/: CMakeLists.txt  Coin.cpp  Coin.hpp  Player.cpp  Player.h  Player.hpp  Portal.cpp  Portal.hpp  Trigger.cpp  Trigger.hpp
